<resources>
    <string name="app_name">Traveloka OCR</string>

    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="other">Or login with</string>
    <string name="login_google">Continue with Google</string>
    <string name="login_fb">Sign In with Facebook</string>

    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="dont_have_account">Don\'t have account?</string>
    <string name="register_now">Register now</string>

    <string name="register_success">User Created</string>
    <string name="register_fail">Register Failed</string>

    <string name="login_success">Login Success</string>
    <string name="login_fail">Login Failed</string>

    <string name="form_not_null">Field cannot be empty</string>

    <string name="already_have_acc">Already have an account?</string>
    <string name="login_now">Login now</string>

    <string name="facebook_app_id" translatable="false">724703425240398</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1234</string>
    <string name="facebook_client_token" translatable="false">8100ad10640c5082f81bc30e09e9eec3</string>

    <string name="data_secure">Your data will be protected and will not be shared.</string>

    <string name="line" translatable="false">line</string>

    <string name="menu_verify">Verify ID Card</string>
    <string name="menu_languages">Language Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_search">Search</string>
    <string name="search_hint">Search name ...</string>

    <string name="verify_id_card">Verify ID Card</string>
    <string name="use_camera_or_gallery">Use camera or gallery to take picture of your ID Card</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="ktp_verified">ID Card Has Been Verified</string>
    <string name="scan_your_ktp">Scan the front side of your ID Card</string>
    <string name="picture">"Picture"</string>

    //Detail
    <string name="dt_name">Name :</string>
    <string name="dt_nin">NIK :</string>
    <string name="dt_place_dob">Place, Date of Birth :</string>
    <string name="dt_gender">Gender :</string>
    <string name="dt_blood_type">Blood Type :</string>
    <string name="dt_address">Address :</string>
    <string name="dt_religion">Religion :</string>
    <string name="dt_occupation">Occupation :</string>
    <string name="dt_nationality">Nationality :</string>

    <string name="ph_name" translatable="false">Placeholder Nama</string>
    <string name="ph_nin" translatable="false">Placeholder NIK</string>
    <string name="ph_place_dob" translatable="false">Placeholder Tempat, Tanggal Lahir</string>
    <string name="ph_gender" translatable="false">Placeholder Jenis Kelamin</string>
    <string name="ph_blood_type" translatable="false">Placeholder Golongan Darah</string>
    <string name="ph_address" translatable="false">Placeholder Alamat</string>
    <string name="ph_religion" translatable="false">Placeholder Agama</string>
    <string name="ph_occupation" translatable="false">Placeholder Pekerjaan</string>
    <string name="ph_nationality" translatable="false">Placeholder Kewarganegaraan</string>

    <string name="your_web_client_id" translatable="false">"45596774087-04lqsefpjm806kio8o1kv2r5efn7g70p.apps.googleusercontent.com"</string>

    // Preview
    <string name="preview_name">Name</string>
    <string name="preview_nin">National Identity Number (NIN)</string>
    <string name="preview_place_and_dob">Place and Date of Birth</string>
    <string name="preview_gender">Gender</string>
    <string name="preview_blood_type">Blood Type</string>
    <string name="preview_address">Address</string>
    <string name="preview_neighborhood">Neighborhood</string>
    <string name="preview_village">Rural / Urban Village</string>
    <string name="preview_sub_district">Sub-District</string>
    <string name="preview_religion">Religion</string>
    <string name="preview_marital_status">Marital Status</string>
    <string name="preview_occupation">Occupation</string>
    <string name="preview_nationality">Nationality</string>
    <string name="preview_expired_date">Expired Date</string>
    <string name="preview_district">District</string>
    <string name="preview_province">Province</string>

    <string name="process_ocr">Processing OCR</string>
    <string name="save">Save</string>
    <string name="detail">ID Card Detail</string>
    <string name="ocr_fail">Failed to process OCR. Try again!</string>
    <string name="ocr_success">OCR processing success!</string>
    <string name="id_card_success">ID Card is uploaded successfully!</string>
    <string name="id_card_fail">Failed to upload ID Card. Try again!</string>
    <string name="take_picture_first">Please take picture of your ID Card first</string>
    <string name="fail_display_camera">Failed to display camera</string>
    <string name="fail_take_picture">Failed to take a picture</string>
    <string name="logout">Logout</string>
    <string name="want_to_logout">Do you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="success_logout">Account logged out</string>
    <string name="no">No</string>
    <string name="data_not_found">Data is not found</string>
    <string name="take_picture_again">Take Picture Again</string>
    <string name="permission_not_granted">Permission is not granted</string>
    <string name="choose_picture">Choose your ID Card picture</string>
</resources>