<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/name_regis"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:autofillHints="name"
        android:fontFamily="@font/inter_medium"
        android:hint="@string/name"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColor="@color/gray_light"
        android:textColorHint="@color/gray_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email_regis"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:autofillHints="emailAddress"
        android:fontFamily="@font/inter_medium"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColor="@color/gray_light"
        android:textColorHint="@color/gray_light"
        app:layout_constraintEnd_toEndOf="@+id/name_regis"
        app:layout_constraintStart_toStartOf="@+id/name_regis"
        app:layout_constraintTop_toBottomOf="@+id/name_regis" />

    <EditText
        android:id="@+id/pass_regis"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:autofillHints="password"
        android:fontFamily="@font/inter_medium"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="@color/gray_light"
        android:textColorHint="@color/gray_light"
        app:layout_constraintEnd_toEndOf="@+id/email_regis"
        app:layout_constraintStart_toStartOf="@+id/email_regis"
        app:layout_constraintTop_toBottomOf="@+id/email_regis" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_regis"
        android:layout_width="360dp"
        android:layout_height="48dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/background_button1"
        android:fontFamily="@font/inter_bold"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/line"
        android:src="@drawable/rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </ImageView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/already_have_acc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.278"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:drawableLeft="@drawable/ic_lock"
        android:drawablePadding="4dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/data_secure"
        app:layout_constraintEnd_toEndOf="@+id/pass_regis"
        app:layout_constraintStart_toStartOf="@+id/pass_regis"
        app:layout_constraintTop_toBottomOf="@+id/pass_regis" />

    <TextView
        android:id="@+id/to_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/login_now"
        android:textColor="@color/blue_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.067"
        app:layout_constraintStart_toEndOf="@+id/textView" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:translationZ="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />


</androidx.constraintlayout.widget.ConstraintLayout>